applications/scanner/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: scanner
    labels:
        name: scanner
