applications/scanner/filebrowser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: scanner
  name: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      volumes:
      - name: filebrowser
        configMap:
          name: filebrowser
      - name: shared
        persistentVolumeClaim:
          claimName: scanner
          readOnly: false
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:v2.22.4
        imagePullPolicy: Always
        volumeMounts:
        - name: filebrowser
          subPath: filebrowser.json
          mountPath: /.filebrowser.json
        - name: shared
          subPath: scanner/srv/scanner
          mountPath: /srv/scanner/srv/scanner
        ports:
        - containerPort: 80
        resources: {}
        command: ["/filebrowser", "--disable-preview-resize", "--disable-thumbnails"]
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: scanner
spec:
  selector:
    app: filebrowser
  ports:
  - name: filebrowser
    port: 8080
    targetPort: 80
