applications/scanner/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: scanner
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: docker-entrypoint-d
          emptyDir: {}
        - name: nginx
          configMap:
            name: nginx
        - name: shared
          persistentVolumeClaim:
            claimName: scanner
            readOnly: false
      containers:
        - name: nginx
          image: nginx:stable
          imagePullPolicy: Always
          volumeMounts:
            - name: docker-entrypoint-d
              mountPath: /docker-entrypoint.d
            - name: nginx
              subPath: default.conf
              mountPath: /etc/nginx/conf.d/default.conf
            - name: shared
              subPath: scanner/srv/scanner
              mountPath: /srv/scanner
          ports:
            - containerPort: 80
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: scanner
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
