applications/scanner/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: scanner
  name: scanner-basic-auth
spec:
  basicAuth:
    secret: scanner-basic-auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: scanner
  name: scanner
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: scanner-scanner-basic-auth@kubernetescrd # (namespace)-(name)@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - scanner.initialed85.cc
      secretName: scanner
  rules:
    - host: scanner.initialed85.cc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - pathType: Prefix
            path: /filebrowser
            backend:
              service:
                name: filebrowser
                port:
                  number: 8080
